# argent

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  TASK11.md  TASKS.md  check.sh
.github/workflows/: ci.yaml
crates/argent-artifact/: Cargo.toml
crates/argent-artifact/src/: lib.rs  verify_spawns.rs
crates/argent-runtime/: Cargo.toml
crates/argent-runtime/src/: context.rs  lib.rs  resolve.rs  transition.rs
crates/silverscript-abi/: Cargo.toml
crates/silverscript-abi/src/: lib.rs
docs/: argent-design.md  entry-clause-ranges.md  entry-effect-ranges.md  followups.md  icc-semantics.md  route-algo.txt  route-planner.md  template-merklization-algos.md  template-tree-cut-algos.md  tx-builder-sigscript-resolution.md
examples/: counter.ag  route_payload_choice.ag  route_payloads.ag  route_state_bodies.ag  route_state_body_choice.ag  settle.ag  spawns.ag  tickets.ag
examples/icc/: kcc20_asset.ag  kcc20_asset_real.ag  minter.ag  minter_proxy_observer.ag  minter_proxy_observer_real.ag
examples/open_icc/: README.md  agent.ag  core.ag
examples/open_lattice/: README.md  binding_sketch.ag  closed_strategy.ag
examples/stones/: README.md  app.ag  game.ag  league.ag  player.ag  settle.ag  types.ag
examples/toy_chess/: app.ag
src/: artifact.rs  ast.rs  builder.rs  codec.rs  emit.rs  error.rs  hex.rs  language.rs  lexer.rs  lib.rs  loader.rs  main.rs  parser.rs  routes.rs  routing.rs
src/artifact/: mod.rs  sil_abi.rs
src/routing/: commitment.rs  graph.rs  mod.rs  optimization.md  plan.rs
tests/fixtures/emit/capsule_route_context/: ReserveAsset.sil  WalletAsset.sil  app.ag
tests/fixtures/emit/input_template_route_reuse/: Controller.sil  app.ag
tests/fixtures/emit/observed_template_witnesses/: Local.sil  app.ag
tests/fixtures/emit/open_observed_actor_binding/: Cell.sil  app.ag
tests/fixtures/emit/open_observed_state_handle/: Cell.sil  app.ag
tests/fixtures/emit/single_actor_self_consume/: Counter.sil  app.ag
tests/fixtures/emit/state_expansion/: Forager.sil  app.ag
tests/fixtures/runtime/context_closed_icc/: asset.ag  controller.ag
tests/fixtures/runtime/context_genesis_spawn/: Controller.sil  app.ag
tests/fixtures/runtime/context_multiple_genesis_spawns/: Controller.sil  Pair.sil  app.ag
tests/fixtures/runtime/context_signed_observed/: asset.ag  capsule.ag  controller.ag
tests/fixtures/runtime/context_static_actor_spawn/: Child.sil  Launcher.sil  app.ag
tests/fixtures/runtime/fluent_closed_icc/: asset.ag  controller.ag
tests/fixtures/runtime/fluent_signed_observed/: controller.ag
vscode/argent-syntax/: README.md  extension.js  language-configuration.json  language-service.js  language-service.test.js  package.json
vscode/argent-syntax/syntaxes/: argent.tmLanguage.json
