[package]
name = "argent"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
license = "ISC"
authors = ["Kaspa developers"]

[workspace]
members = [".", "crates/argent-artifact", "crates/argent-runtime", "crates/silverscript-abi"]
resolver = "3"

[workspace.dependencies]
argent-artifact = { path = "crates/argent-artifact" }
argent-runtime = { path = "crates/argent-runtime" }
blake2b_simd = "1.0.2"
faster-hex = "0.10"
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1" }
kaspa-txscript-errors = { git = "https://github.com/kaspanet/rusty-kaspa", tag = "v2.0.1" }
secp256k1 = { version = "0.29.0", features = ["global-context"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
silverscript-abi = { path = "crates/silverscript-abi" }
silverscript-lang = { git = "https://github.com/michaelsutton/silverscript", rev = "2e33903f5d1bd8243f1ad9fca4f274c751d50c56", package = "silverscript-lang" }
thiserror = "2"

[lib]
name = "argent"
path = "src/lib.rs"

[[bin]]
name = "argentc"
path = "src/main.rs"

[dependencies]
argent-artifact = { workspace = true }
argent-runtime = { workspace = true }
blake2b_simd = { workspace = true }
serde_json = { workspace = true }
silverscript-abi = { workspace = true }
silverscript-lang = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
kaspa-consensus-core = { workspace = true }
kaspa-txscript = { workspace = true }
kaspa-txscript-errors = { workspace = true }
secp256k1 = { workspace = true }
