[package]
name = "argent-artifact"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

[dependencies]
blake2b_simd = { workspace = true }
faster-hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
silverscript-abi = { workspace = true }
thiserror = { workspace = true }
